fix mobile formatting on safari

--- a/static/life-styles.css
+++ b/static/life-styles.css
@@ -1,13 +1,19 @@
 body {
   margin: 0px;
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+img {
+  object-fit: cover;
 }
 
 #content {
-  width: unset;
-  max-width: unset; 
+  width: 100vw;
+  max-width: 100vw; 
 }
 
-#content > *:not(:last-child) {
+#content > *:not(:last-child):not(svg) {
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -56,12 +62,12 @@ body {
 }
 
 .spacer > :first-child {
-  border-right: .5px solid black;
+  border-right: 1px solid black;
   align-items: flex-end;
 }
 
 .spacer > :last-child {
-  border-left: .5px solid black;
+  border-left: 1px solid black;
   align-items: flex-start;
 }
 
